refactor: maven to gradle